--- a/Example_ConstantGOM/OneJointAngle_StateSpace_GOM.ipynb
+++ b/Example_ConstantGOM/OneJointAngle_StateSpace_GOM.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TP: State space representation and forecasting of joint angles"
+    "# State space representation and forecasting of joint angles"
    ]
   },
   {
