--- a/Example_ConstantGOM/OneJointAngle_StateSpace_GOM.ipynb
+++ b/Example_ConstantGOM/OneJointAngle_StateSpace_GOM.ipynb
@@ -35,9 +35,7 @@
     "\n",
     "**4.** Static forecasting\n",
     "\n",
-    "**5.** Dynamic forecasting\n",
-    "\n",
-    "Please read and follow the instructions placed before specific cells and modify the lines of code requested. "
+    "**5.** Dynamic forecasting\n"
    ]
   },
   {
